--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "mizbauddintareq",
   "license": "ISC",
   "lint-staged": {
-    "src/**/.ts": "yarn lint-prettier"
+    "src/**/*.ts": "yarn lint-prettier"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
