--- a/.eslintrc
+++ b/.eslintrc
@@ -13,12 +13,12 @@
   ],
 
   "rules": {
-    "no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "error",
     "no-console": "error",
-    "no-undef": "error",
+    // "no-undef": "error",
     "no-unused-expressions": "error",
     "no-unreachable": "error",
-    "consistent-type-definitions": ["error", "type"]
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
 
   "env": {
