--- a/.eslintrc
+++ b/.eslintrc
@@ -13,9 +13,9 @@
   ],
 
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "no-console": "error",
-    // "no-undef": "error",
+    "no-unused-vars": "error",
+    "no-console": "warn",
+    "no-undef": "error",
     "no-unused-expressions": "error",
     "no-unreachable": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
@@ -23,6 +23,10 @@
 
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
