--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
